Changes for scaling issues

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="content-middle">
                 <div class="content-middle-left">
                     <h1>SAMVITTIGHETSFANGER</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at varius orci. Phasellus venenatis, est eget bibendum condimentum, odio augue tempor tellus, ullamcorper elementum neque nibh non felis. Nulla porta eros vel venenatis sodales. Proin non quam laoreet diam suscipit mattis a sit amet nisl. Quisque cursus metus in porttitor congue. Nam id posuere massa. Vivamus bibendum purus ac accumsan luctus. Nulla ut malesuada ligula, non vulputate arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc finibus hendrerit ex, pulvinar sagittis nibh ultrices ac. Suspendisse ac dolor lobortis, condimentum ligula id, interdum urna. Sed rhoncus mi nec mattis mollis. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at varius orci. Phasellus venenatis, est eget bibendum condimentum, odio augue tempor tellus, ullamcorper elementum neque nibh non felis. Nulla porta eros vel venenatis sodales. Proin non quam laoreet diam suscipit mattis a sit amet nisl. Quisque cursus metus in porttitor congue. Nam id posuere massa. Vivamus bibendum purus ac accumsan luctus. Nulla ut malesuada ligula, non vulputate arcu.</p>
                     <button>Les mer</button>
                 </div>
  
