Changes for better scaling

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="content-bottom-right">
                     <h1>PROGRAM</h1>
                     <p>- Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>- Praesent elementum nisi sed augue iaculis, nec fringilla est pellentesque.</p>
+                    <p>- Praesent elementum nisi sed augue iaculis, nec est fringilla.</p>
                     <p>- Sed nec magna lacinia, blandit dolor in, iaculis nulla.</p>
                     <p>- Proin suscipit nunc eu molestie molestie.4</p>
                     <p>- Proin ultrices leo eu elit maximus commodo.</p>
