--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>- Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <p>- Praesent elementum nisi sed augue iaculis, nec est fringilla.</p>
                     <p>- Sed nec magna lacinia, blandit dolor in, iaculis nulla.</p>
-                    <p>- Proin suscipit nunc eu molestie molestie.4</p>
+                    <p>- Proin suscipit nunc eu elementum futroa.</p>
                     <p>- Proin ultrices leo eu elit maximus commodo.</p>
                     <p>- Pellentesque id orci ut nunc egestas maximus tempor sit amet nulla.</p>
                 </div>
